--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "inventorykeeper",
+  "name": "estock",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,7 +15,7 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
     "@reduxjs/toolkit": "^2.2.3",
-    "firebase": "^10.10.0",
+    "firebase": "^10.6.0",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
