--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.6",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.1.1",
     "@reduxjs/toolkit": "^2.2.3",
+    "antd": "^5.16.1",
     "firebase": "^10.6.0",
     "formik": "^2.4.5",
     "papaparse": "^5.4.1",
