--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "antd": "^5.16.1",
     "firebase": "^10.6.0",
     "formik": "^2.4.5",
+    "framer-motion": "^11.0.25",
+    "grommet": "^2.36.1",
+    "grommet-icons": "^4.12.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +30,7 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "redux-persist": "^6.0.0",
+    "styled-components": "^6.1.8",
     "yup": "^1.4.0"
   },
   "devDependencies": {
