--- a/package.json
+++ b/package.json
@@ -17,12 +17,10 @@
     "@mui/material": "^5.15.15",
     "@mui/x-data-grid": "^7.1.1",
     "@reduxjs/toolkit": "^2.2.3",
-    "antd": "^5.16.1",
+    "antd": "^5.16.2",
     "firebase": "^10.6.0",
     "formik": "^2.4.5",
     "framer-motion": "^11.0.25",
-    "grommet": "^2.36.1",
-    "grommet-icons": "^4.12.1",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -43,7 +41,9 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "less": "^4.2.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
