--- a/package.json
+++ b/package.json
@@ -43,7 +43,6 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "less": "^4.2.0",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "vite-plugin-style-import": "^2.0.0"
+    "vite": "^5.2.0"
   }
 }
